# ferrite

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: aur-publish.yml  ci.yml  release.yml
src/: ai.rs  cli.rs  collections.rs  config.rs  diff.rs  download.rs  env_cmd.rs  errors.rs  items.rs  lib.rs  main.rs  output.rs  request.rs  response.rs  secrets.rs  sessions.rs  testing.rs  tui.rs  utils.rs
src/auth/: basic.rs  bearer.rs  digest.rs  mod.rs
src/format/: headers.rs  html.rs  json.rs  mod.rs  xml.rs
src/output/: printer.rs  theme.rs
src/plugins/: manager.rs  mod.rs
tests/: integration.rs
tests/common/: mod.rs
tests/integration/: auth_test.rs  collections_test.rs  config_test.rs  downloads_test.rs  get_test.rs  output_test.rs  post_test.rs  redirects_test.rs  sessions_test.rs  uploads_test.rs  workspaces_test.rs
